# folder-to-folder-sync

./: .gitignore  .prepare_codespace.sh  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: settings.json
.github/.github/workflows/: python-publish.yml
media_to_folder_sync/: _get_dir.py  handle_files_copying.py  read_exif_data.py  rename_acc_to_date.py
